return account info with token
