# gateway/src/main/java/at/fhv/layblar/authentication/dto/AccountTokenDTO.java
@@ -1,0 +1,7 @@
+package at.fhv.layblar.authentication.dto;
+
+public class AccountTokenDTO {
+    
+    public AccountDTO account;
+    public String token;
+}
